--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="login-card">
         <div class="login-hero">
-          <img class="login-hero-img" src="/img/login-hero.svg" alt="" />
+          <img class="login-hero-img" src="./img/login-hero.svg" alt="" />
           <p class="login-hero-desc">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
             esse incidunt delectus totam veniam vitae quibusdam neque.
@@ -37,7 +37,7 @@
 
           <fieldset class="login-input">
             <div>
-              <img src="/img/user-icon.svg" alt="" />
+              <img src="./img/user-icon.svg" alt="" />
               <input
                 type="text"
                 name="username"
@@ -46,7 +46,7 @@
               />
             </div>
             <div>
-              <img src="/img/lock-icon.svg" alt="" />
+              <img src="./img/lock-icon.svg" alt="" />
               <input
                 type="password"
                 name="password"
@@ -64,7 +64,7 @@
                 id="login-remember"
               />
               <label for="login-remember" class="checkbox">
-                <img src="/img/tick-icon.svg" alt="" />
+                <img src="./img/tick-icon.svg" alt="" />
               </label>
               <label for="login-remember">Remember</label>
             </div>
